@@ -2,6 +2,7 @@
 
 current
   * to allow phpo in workflow
+  * added --check to pflow
 
 1.4.82
   * renamed pandatools to pandaclient
